-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.14.1
-
None
After fixing QTBUG-81916, an attempt to build Qt 5.14.1 with clang 10.0-rc1 in C++20 mode fails with a similar error in QtWidgets:
dialogs/qwizard.cpp:1241:20: error: use of overloaded operator '!=' is ambiguous (with operand types 'QWizardLayoutInfo' and 'QWizardLayoutInfo') if (layoutInfo != info) ~~~~~~~~~~ ^ ~~~~ dialogs/qwizard.cpp:259:17: note: candidate function inline bool operator!=(const QWizardLayoutInfo &other) { return !operator==(other); } ^ dialogs/qwizard.cpp:262:25: note: candidate function bool QWizardLayoutInfo::operator==(const QWizardLayoutInfo &other) ^ dialogs/qwizard.cpp:262:25: note: candidate function (with reversed parameter order)
As with QTBUG-81916, this will likely be an issue for other compilers as well when they catch up with C++20.
For Gerrit Dashboard: QTBUG-81917 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
289523,4 | QWizardLayoutInfo: make == and != operators const | dev | qt/qtbase | Status: MERGED | +2 | 0 |
289526,2 | Make == and != operators const | 5.15 | qt/qtbase | Status: ABANDONED | 0 | 0 |
289528,2 | Make == and != operators const | 5.14 | qt/qtbase | Status: ABANDONED | 0 | 0 |
389488,1 | QWizardLayoutInfo: make == and != operators const | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
389489,2 | QWizardLayoutInfo: make == and != operators const | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
389502,2 | QWizardLayoutInfo: make == and != operators const | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |