QWizardLayoutInfo: make == and != operators const

This fixes building with clang 10.0 in C++20 mode.
http://eel.is/c++draft/diff.cpp17.over

Thanks to Ville Voutilainen <ville.voutilainen@qt.io>
for pointing out this better fix.

Task-number: QTBUG-81917
Pick-to: 6.3 6.2 5.15
Change-Id: I8ce5776ddcd061b4615239e38caa5ad07950b66d
Reviewed-by: Marc Mutz <marc.mutz@qt.io>