src/widgets/dialogs/qwizard.cpp
@@ -254,11 +254,11 @@ public:
     bool extension = false;
     bool sideWidget = false;
 
-    bool operator==(const QWizardLayoutInfo &other);
-    inline bool operator!=(const QWizardLayoutInfo &other) { return !operator==(other); }
+    bool operator==(const QWizardLayoutInfo &other) const;
+    inline bool operator!=(const QWizardLayoutInfo &other) const { return !operator==(other); }
 };
 
-bool QWizardLayoutInfo::operator==(const QWizardLayoutInfo &other)
+bool QWizardLayoutInfo::operator==(const QWizardLayoutInfo &other) const
 {
     return topLevelMarginLeft == other.topLevelMarginLeft
            && topLevelMarginRight == other.topLevelMarginRight
